--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button id="btn-subtract">Subtract</button>
     <div id="result"></div>
   </div>
+  <div></div>
   <script src="script.js"></script>
 </body>
 </html>
